🔧 fix(version-number): update version display to include dynamic version from local storage and enhance styling with text shadow and z-index

--- a/research-indicators/src/app/pages/landing/components/version-number/version-number.component.scss
+++ b/research-indicators/src/app/pages/landing/components/version-number/version-number.component.scss
@@ -5,4 +5,6 @@
   padding: 10px;
   font-size: 12px;
   color: #b9b9b991;
+  text-shadow: 0 0 10px rgb(0 0 0 / 50%);
+  z-index: 1000;
 }
